--- a/bloginformativo.html
+++ b/bloginformativo.html
@@ -20,7 +20,7 @@
         </div>
       <nav class="menu">
           <a href="index.html">Inicio</a>
-          <a href="Vacaciones.html">Vacaciones</a>
+          <a href="vacaciones.html">Vacaciones</a>
           <a href="bloginformativo.html">Blog Informativo</a>
           <a class="link_contacto" href="#Contacto">Contacto</a>
         </nav>
